--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,19 @@
-<h1>Currency Converter</h1>
+<h1>CURRENCY CONVERTER</h1>
 
 <form action="/convert">
-    <label for="dollars">Amount of dollars</label>
+    <label for="dollars">AMOUNT OF DOLLARS</label>
     <input type="number" step="any" name="dollars" id="dollars" required/>
 
     <br>
 
-    <label for="to_currency">Convert to</label>
+    <label for="to_currency">CONVERT TO</label>
     <select name="to_currency" id="to_currency">
         <option value="EUR">Euros</option>
         <option value="JPY">Japanese Yen</option>
     </select>
 
     <br>
-
-    <button type="submit">Convert</button>
+<p>
+    <button class="button" type="submit">CONVERT</button>
 
 </form>
