--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
   </head>
   <body>
     {{{body}}}
-
-    <a href="/">Home</a> <a href="/about"></a>
+<p>
+    <button class="button"><a href="/">HOME</a> <a href="/about"></a></button>
   </body>
 </html>
