--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,3 +1,3 @@
 <h1>Results</h1>
 
-<p>${{dollars}} is equivalent to {{converted}} {{toCurrency}}</p>
+<p>${{fromCurrency}} is equivalent to {{converted}} {{toCurrency}}</p>
