--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,8 @@
   </head>
   <body>
     {{{body}}}
-<p>
-    <button class="button"><a href="/">HOME</a> <a href="/about"></a></button>
+<p></p>
+    <span><button class="button"><a href="/">HOME</a></button></span>
+    <span><button class="button"><a href="/about/">ABOUT</a></button></span>
   </body>
 </html>
