--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,3 +1,3 @@
 <h1>Results</h1>
 
-<p>${{fromCurrency}} is equivalent to {{converted}} {{toCurrency}}</p>
+<p>{{currency}} {{fromcurr}} is equivalent to {{converted}} {{toCurrency}}</p>
